Removed unused view model and added api ref to azure

--- a/the-facts-api/Web.config
+++ b/the-facts-api/Web.config
@@ -49,7 +49,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="ChuckNorrisEntities" connectionString="metadata=res://*/Data.ChuckNorrisModel.csdl|res://*/Data.ChuckNorrisModel.ssdl|res://*/Data.ChuckNorrisModel.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\v11.0;attachdbfilename=&quot;C:\dev\IceniumChuckNorris\DB Assets\ChuckNorris.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+    <add name="ChuckNorrisEntities" connectionString="metadata=res://*/Data.ChuckNorrisModel.csdl|res://*/Data.ChuckNorrisModel.ssdl|res://*/Data.ChuckNorrisModel.msl;provider=System.Data.SqlClient;provider connection string='data source=(LocalDB)\v11.0;attachdbfilename=&quot;C:\git\the-facts\the-facts-api\App_Data\ChuckNorris.mdf&quot;;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
